// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditableText /> with additional className matches its snapshot 1`] = `
<span
  className="y-editableText"
>
  <Clickable
    className="y-editableText--clickable"
    onClick={[Function]}
    unstyled={true}
  >
    <Edit />
     
    <span
      className="y-editableText--clickableText"
    />
  </Clickable>
</span>
`;

exports[`<EditableText /> with all props except promptText shallow matches its snapshot 1`] = `
<span
  className="y-editableText"
>
  <Clickable
    className="y-editableText--clickable"
    onClick={[Function]}
    unstyled={true}
  >
    <Edit />
     
    <span
      className="y-editableText--clickableText"
    >
      TEXT
    </span>
  </Clickable>
</span>
`;

exports[`<EditableText /> with promptText matches its snapshot 1`] = `
<span
  className="y-editableText"
>
  <Clickable
    ariaLabel="PROMPT TEXT"
    className="y-editableText--clickable"
    onClick={[Function]}
    unstyled={true}
  >
    <Edit />
     
    <span
      className="y-editableText--clickableText"
    >
      PROMPT TEXT
    </span>
  </Clickable>
</span>
`;
